--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-email/components": "^0.0.12",
     "@react-email/tailwind": "^0.0.13",
     "@vercel/analytics": "^1.3.1",
+    "@vercel/speed-insights": "^1.0.14",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
